--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     
     <button class="w3-button w3-light-grey w3-padding-large w3-section">
-      <a href="cal.png" download> Download Resume </a>
+      <a href="cal.PNG" download> Download Resume </a>
     </button>
    
     
